[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/img/1600w-iC5A8PGB4t0.webp" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Vontjack.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/upheavtt.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://dev/scripts/game_paused.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 69
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )

[sub_resource type="GDScript" id=8]
script/source = "extends Button


# Declare member variables here. Example:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -313.5
margin_top = -229.0
margin_right = 313.5
margin_bottom = 229.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 627.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 1

[node name="ResumeGame" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 627.0
margin_bottom = 120.0
focus_neighbour_top = NodePath("../Menu")
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
text = "Resume Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 627.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
disabled = true
text = "Settings"

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 627.0
margin_bottom = 192.0
focus_neighbour_bottom = NodePath("../ResumeGame")
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
text = "Menu"
script = SubResource( 8 )

[connection signal="pressed" from="VBoxContainer/ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
